Fixed PPCG's allocation error by moving the variable declarations to outside the nested loop. There is still a function not inlined, how did PPCG handle that?

--- a/PPCG-Make3DArrays/Makefile
+++ b/PPCG-Make3DArrays/Makefile
@@ -5,4 +5,5 @@ PPCG-2:
     
 PPCG:
 	 ppcg  --target=c --openmp --live-range-analysis --dump-schedule  lulesh-body.c   -o ppcg_lulesh-body.c
-
+PPCG-3:
+	gcc -g -lm -std=c99 ppcg_lulesh-body.c -O3 -lm
