Sent to France this version. 6 Loops ( loop 3,6,7,13,15 and 9)

--- a/PPCG-Make3DArrays/Makefile
+++ b/PPCG-Make3DArrays/Makefile
@@ -8,6 +8,6 @@ PPCG:
 PPCG-3:
 	gcc -g -lm -std=c99 ppcg_lulesh-body.c -O3 -lm
 cscope:
-	cscope -b -q -k -R 
-tags:
+	cscope -b -q -k  
+tag:
 	ctags *.c *.h
